@@ -1,0 +1,9 @@
+remctl
+remctl_close
+remctl_command
+remctl_commandv
+remctl_error
+remctl_new
+remctl_open
+remctl_output
+remctl_result_free
